--- a/Alua-front/package.json
+++ b/Alua-front/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.6.2",
+    "cors": "^2.8.5",
     "element-plus": "^2.4.4",
     "highlight.js": "^11.9.0",
     "less": "^4.2.0",
